
SUBDIRS = icons

pkgdata_DATA = dia-splash.png

uidir = $(uidatadir)
ui_DATA = 			\
	display-ui.xml	\
	toolbox-ui.xml	\
	popup-ui.xml \
	toolbar-ui.xml \
	integrated-ui.xml \
	\
	sheets-edit-dialog.xml \
	sheets-main-dialog.xml \
	sheets-new-dialog.xml \
	sheets-remove-dialog.xml

EXTRA_DIST = \
	$(ui_DATA) \
	$(pkgdata_DATA)
