
SUBDIRS = icons

pkgdata_DATA = dia-splash.png

uidir = $(uidatadir)
ui_DATA = 			\
	display-ui.xml	\
	toolbox-ui.xml	\
	popup-ui.xml \
	toolbar-ui.xml \
	integrated-ui.xml \
	\
	sheets-edit-dialog.xml \
	sheets-main-dialog.xml \
	sheets-new-dialog.xml \
	sheets-remove-dialog.xml \
	dia-arrow-chooser-popover.ui       \
	dia-sheet-chooser-popover.ui       \
	dia-uml-formal-parameter-dialog.ui \
	dia-line-chooser-popover.ui        \
	dia-uml-attribute-dialog.ui        \
	dia-uml-operation-dialog.ui        \
	dia-list-row.ui                    \
	dia-uml-class-editor.ui            \
	dia-uml-operation-parameter-row.ui

EXTRA_DIST = \
	$(ui_DATA) \
	$(pkgdata_DATA)
