stdprop_sources = [
    'properties.c',
    'propdesc.c',
    'proplist.c',
    'propoffsets.c',
    'propobject.c',
    'prop_basic.c',
    'prop_dict.c',
    'prop_matrix.c',
    'prop_pattern.c',
    'prop_pixbuf.c',
    'prop_inttypes.c',
    'prop_geomtypes.c',
    'prop_attr.c',
    'prop_text.c',
    'prop_widgets.c',
    'prop_sdarray.c',
    'prop_sdarray_widget.c',
    'propdialogs.c',
    'propregistry.c'
]

libdia_sources = stdprop_sources + [
    'diagramdata.c',
    'layer.c',
    'geometry.c',
    'color.c',
    'dia_xml.c',
    'attributes.c',
    'text.c',
    'textline.c',
    'font.c',
    'group.c',
    'utils.c',
    'arrows.c',
    'message.c',
    'focus.c',
    'sheet.c',
    'connectionpoint.c',
    'object.c',
    'object-alias.c',
    'object_defaults.c',
    'connection.c',
    'orth_conn.c',
    'poly_conn.c',
    'bezier_conn.c',
    'bezier-common.c',
    'element.c',
    'polyshape.c',
    'beziershape.c',
    'objchange.c',
    'dialogs.c',
    'widgets.c',
    'diaoptionmenu.c',
    'units.c',
    'dia_image.c',
    'pattern.c',
    'standard-path.c',
    'intl.c',
    'filter.c',
    'connpoint_line.c',
    'dia_dirs.c',
    'plug-ins.c',
    'paper.c',
    'boundingbox.c',
    'dynamic_obj.c',
    'create.c',
    'diatransform.c',
    'diarenderer.c',
    'diaimportrenderer.c',
    'diainteractiverenderer.c',
    'renderer/diacairo.c',
    'renderer/diacairo-renderer.c',
    'renderer/diacairo-interactive.c',
    'renderer/diacairo-print.c',
    'diapathrenderer.c',
    'path-math.c',
    'diapatternselector.c',
    'diatransformrenderer.c',
    'diasvgrenderer.c',
    'dia_svg.c',
    'autoroute.c',
    'parent.c',
    'diaarrowchooser.c',
    'diaarrowselector.c',
    'diacolorselector.c',
    'dialinestyleselector.c',
    'dialinechooser.c',
    'diadynamicmenu.c',
    'diafontselector.c',
    'persistence.c',
    'diaerror.c',
    'debug.c',
    'prefs.c',
    'dialib.c',
    'diacontext.c',
    'diacellrendererenum.c',
    'diacellrendererproperty.c',
]

gnome = import('gnome')
diamarshal = gnome.genmarshal(
    'diamarshal',
    prefix: 'dia_marshal',
    sources: 'diamarshal.list',
)

# TODO: This is used in app/, should we install / do anything else with it?
diamarshal_h = diamarshal[1]

resources = gnome.compile_resources('libdia-resources', 'libdia.gresource.xml',
                                    source_dir : '.',
                                    c_name : 'libdia')

libdia_deps = [
    libc_dep,
    libgtk_dep,
    libglib_dep,
    libxml_dep,
    libm_dep,
    libzlib_dep,
    gmodule_dep,
]

libdia_inc = include_directories('.')

libdia_lib = library('dia',
    libdia_sources + [diamarshal, resources, config_h],
    dependencies: libdia_deps,
    include_directories: configuration_inc,
    c_args: ['-Wall', '-DLIBDIA_COMPILATION'],
    vs_module_defs: 'libdia.def',
    install: true,
)

libdia_dep = declare_dependency (include_directories: libdia_inc,
                                 link_with: libdia_lib,
                                 dependencies: libdia_deps)
