## Process this file with automake to produce Makefile.in

SUBDIRS = standard network UML ER FS flowchart custom custom_lines GRAFCET \
	chronogram SADT Misc bondgraph Istar Jackson KAOS AADL SISSI Database #EML

## I have disabled building the EML files, for GPL compliance reasons. Ask me
## why in private, if you care. -- CC.

EXTRA_DIST = \
	makefile.msc objects.def
