## Process this file with automake to produce Makefile.in

EXTRA_DIST = ER-demo.dia UML-demo.dia \
	SADT.dia chronograms.dia grafcet.dia \
	Istar.dia Jackson.dia KAOS.dia all_objects.dia \
	render-test.dia UMLPackages.dia TexChars.dia \
	Metapost-Testcase.dia CompositeAction.dia \
	dia_gnome_icon.png dia_logo.png

