## Process this file with automake to produce Makefile.in
sampledir = $(pkgdatadir)/samples

sample_DATA = \
	Circuit.dia \
	ER-demo.dia \
	UML-demo.dia \
	SADT.dia \
	chronograms.dia \
	grafcet.dia \
	Istar.dia \
	Jackson.dia \
	KAOS.dia \
	render-test.dia \
	UMLPackages.dia \
	TexChars.dia \
	Metapost-Testcase.dia \
	CompositeAction.dia

EXTRA_DIST = $(sample_DATA) \
	dia_gnome_icon.png \
	dia_logo.png

